codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_bug.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 补充说明（故障）
▌
▌ （可选）写一段简短描述以便我们进一步了解

按 enter 确认或按 esc 返回
