codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_good_result.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 补充说明（效果很好）
▌
▌ （可选）写一段简短描述以便我们进一步了解

按 enter 确认或按 esc 返回
