codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_safety_check.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 补充说明（安全检查）
▌
▌ （可选）说明被拒绝的内容以及为何应该允许

按 enter 确认或按 esc 返回
